test-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ingress
  labels: 
    app: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels: 
        app: test-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
