test-readiness-pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: rediness-test-pod
spec:
  containers:
  - name: nginx-pod
    image: nginx
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 10
      periodSeconds: 5
