test-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels: 
    app: test-app
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
