test-service2.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test-app
  name: test-service-2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-app
  type: NodePort
status:
  loadBalancer: {}
