test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: test-ingress
  labels: 
    app: test-app
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-service
            port:
              number: 9376
